<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/oval" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/title_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toStartOf="@+id/lL_date"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/til_margin_right"
            android:layout_marginTop="@dimen/til_margin_top"
            android:layout_below="@+id/tv_title"
            android:hint="@string/hint_todo">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/lL_date"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_line"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/til_margin_top"
            android:layout_below="@+id/tv_title">
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:text="mm/dd/yyyy" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:foregroundGravity="right"
                    android:background="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lL_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lL_date"
            android:layout_marginLeft="@dimen/margin_left"
            android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_mark_complete"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lbl_mark_all" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lL_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lL_desc"
            android:background="@drawable/bg_bottom_landing"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lL_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_below="@+id/lL_cb"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:text="@string/lbl_items_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_line"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="right"
                    android:text="@string/lbl_clear" />
        </LinearLayout>
</RelativeLayout>
